# agentic-ai-project

./: pyproject.toml  requirements.txt
CH-1/: 1_LLM_Call.ipynb  2_Messages.ipynb  Basics.ipynb  TypeDict_example.py  first_chain.ipynb  prompt.py  pydantic_model.py
RAG/: rag_code.ipynb
