[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "load-dotenv>=0.1.0",
    "numpy>=2.4.3",
    "onnxruntime==1.18.0",
    "openai>=2.24.0",
    "protobuf==3.20.3",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
]
